feat: enhance review context management by adding reviewer status updates and improving author field handling